feat!: send filmes to main
