# src/models/User.js
@@ -3,6 +3,12 @@ import mongoose from "mongoose";
 const UserSchema = new mongoose.Schema({
   name: { type: String, required: true },
   email: { type: String, required: true, unique: true },
+  password: { type: String },
+  image: { type: String },
+  emailVerified: { type: Date },
+  role: { type: String },
+  createdAt: { type: Date, default: Date.now },
+  updatedAt: { type: Date, default: Date.now },
 });
 
 export const User = mongoose.models.User || mongoose.model("User", UserSchema);
